[Moises Godoy] - Creacion de clase DatabaseContext y cambios en clase boleta

--- a/ProyectoDBD/src/main/resources/application.properties
+++ b/ProyectoDBD/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-database.url=jdbc:postgresql://localhost:5432/DEBEDE
+database.url=jdbc:postgresql://localhost:5432/sistema_libro_spring
 database.user=postgres
-database.password=admin
-server.port=8086
+database.password=Moises17g
+
+server.port=8080
