--- a/ProyectoDBD/src/main/resources/application.properties
+++ b/ProyectoDBD/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 database.url=jdbc:postgresql://localhost:5432/sistema_libro_spring
 database.user=postgres
-database.password=Moises17g
+database.password=adm123
 
 server.port=8080
