[Ignacio Riquelme] - Se complentan los services de CarritoCompra y Categoria

--- a/ProyectoDBD/src/main/resources/application.properties
+++ b/ProyectoDBD/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 database.url=jdbc:postgresql://localhost:5432/sistema_libro_spring
-database.user=usuario de pruebaz 
+database.user=usuarioDePruebaParaProbarElGitignore
 database.password=adm123
 
 server.port=8080
