[Moises Godoy] - Repository y services de la clase Ubicacion

--- a/ProyectoDBD/src/main/resources/application.properties
+++ b/ProyectoDBD/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-database.url=jdbc:postgresql://localhost:5432/sistema_libro_spring
-database.user=usuarioDePruebaParaProbarElGitignore
-database.password=adm123
-
+database.url="jdbc:postgresql://localhost:5432/sistema_libro_spring"
+database.user=postgres
+database.password=Moises17g
 server.port=8080
